<resources>
    <string name="app_name">Monitora</string>
    <string name="intro_um">Tire sua dúvidas como os melhores profissionais</string>
    <string name="intro_dois">Receba sugestões para o controle da sua safra em minutos</string>

    <string name="next">Pŕoximo</string>
    <string name="preview">Anterior</string>

    <string name="duvida">Qual a sua Dúvida?</string>
    <string name="campo_duvida">a folha de soja está manchada</string>
    <string name="consultar">CONSULTAR</string>
    <string name="title_activity_localizacao">Map</string>
</resources>